<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/notification_header">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="notifications"
            app:title="@string/notifications_title"
            app:summaryOff="@string/notification_off"
            />

        <ListPreference
            app:defaultValue="sound"
            app:entries="@array/notification_mode_entries"
            app:entryValues="@array/notification_mode_values"
            app:key="notification_mode"
            app:title="@string/notification_mode_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/language_header">

        <ListPreference
            app:defaultValue="english"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/language_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/translation_header">

        <SwitchPreferenceCompat
            app:key="background_translation"
            app:defaultValue="false"
            app:title="@string/background_translation_title"
            app:summaryOff="@string/background_translation_summary_off"
            app:summaryOn="@string/background_translation_summary_on"
            />

    </PreferenceCategory>

</PreferenceScreen>